Fix center alignment of text module with header tags

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -95,14 +95,15 @@
     padding-left: 15%;
     padding-right: 15%;
     text-align: left;
+
     :lang(ur) {
       text-align: right;
     }
     h2, h3, h4, h5 {
-      text-align: left;
       margin-bottom: 20px;
       margin-top: 0;
     }
+
     p {
       text-align: left;
       margin-bottom: 20px;
